testData/src/error/java/InterfaceExample.java
/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */

/*
 * ©2009-2018 南京擎盾信息科技有限公司 All rights reserved.
 */
package error.java;

import java.lang.String;

interface InterfaceExample {

  <T> void test(String text);

}

